# ActiForge

./: .gitignore  README.md  pyproject.toml  requirements.txt
auto_actuary/: __init__.py
auto_actuary/analytics/: __init__.py
auto_actuary/analytics/catastrophe/: __init__.py  cat_analysis.py
auto_actuary/analytics/cause_of_loss/: __init__.py  analysis.py
auto_actuary/analytics/frequency_severity/: __init__.py  analysis.py
auto_actuary/analytics/market_insights/: __init__.py  anomaly_detection.py  cycle_detection.py  opportunity_scoring.py
auto_actuary/analytics/portfolio/: __init__.py  market_breakdown.py  product_mix.py  segment_analytics.py
auto_actuary/analytics/profitability/: __init__.py  cohort.py  combined_ratio.py  loss_ratio.py
auto_actuary/analytics/ratemaking/: __init__.py  indicated_rate.py  irpm.py  on_level.py  trend.py
auto_actuary/analytics/reserves/: __init__.py  adequacy.py  ibnr.py
auto_actuary/cli/: __init__.py  main.py
auto_actuary/core/: __init__.py  config.py  data_loader.py  session.py
auto_actuary/reports/: __init__.py
config/: actuarial_assumptions.yaml  lines_of_business.yaml  schema.yaml
docs/: fcas_methodology.md
examples/: 01_basic_loss_development.py  02_reserve_analysis.py  03_rate_indication.py  04_executive_dashboard.py  05_segment_analytics.py
queries/: README.md  policies.sql.example  valuations.sql.example
tests/: conftest.py  test_market_insights.py  test_ratemaking.py  test_reserves.py  test_speculative.py  test_triangles.py
tests/fixtures/: generate_sample_data.py
(+23 files in other folders)
